--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
    "description": "Awesome project developed with TypeORM.",
    "type": "commonjs",
    "devDependencies": {
+      "@types/cors": "^2.8.13",
       "@types/node": "^16.11.10",
       "ts-node": "10.7.0",
       "typescript": "4.5.2"
@@ -11,15 +12,22 @@
    "dependencies": {
       "@types/express": "^4.17.17",
       "body-parser": "^1.19.1",
+      "cors": "^2.8.5",
+      "dotenv": "^16.0.3",
       "express": "^4.17.2",
       "mysql": "^2.14.1",
       "nodemon": "^2.0.21",
       "reflect-metadata": "^0.1.13",
-      "typeorm": "0.3.12"
+      "typeorm": "^0.2.45"
    },
    "scripts": {
       "start": "ts-node src/index.ts",
       "dev": "nodemon src/index.ts",
-      "typeorm": "typeorm-ts-node-commonjs"
+      "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
+      "migration:generate-dry": "ts-node ./node_modules/typeorm/cli.js migration:generate -n migration -p --dr",
+      "migration:generate": "ts-node ./node_modules/typeorm/cli.js migration:generate -p -n",
+      "migration:up": "ts-node ./node_modules/typeorm/cli.js migration:run",
+      "migration:down": "ts-node ./node_modules/typeorm/cli.js migration:revert",
+      "make-migration": "npx typeorm migration:create -n"
    }
 }
