--- a/package.json
+++ b/package.json
@@ -5,16 +5,21 @@
    "type": "commonjs",
    "devDependencies": {
       "@types/cors": "^2.8.13",
-      "@types/node": "^16.11.10",
+      "@types/node": "^16.18.14",
       "ts-node": "10.7.0",
       "typescript": "4.5.2"
    },
    "dependencies": {
       "@types/express": "^4.17.17",
+      "@types/jsonwebtoken": "^9.0.1",
+      "@types/multer": "^1.4.7",
+      "babel-jest": "^29.5.0",
       "body-parser": "^1.19.1",
       "cors": "^2.8.5",
       "dotenv": "^16.0.3",
       "express": "^4.17.2",
+      "jsonwebtoken": "^9.0.0",
+      "multer": "^1.4.5-lts.1",
       "mysql": "^2.14.1",
       "nodemon": "^2.0.21",
       "reflect-metadata": "^0.1.13",
