--- a/.env
+++ b/.env
@@ -6,4 +6,6 @@ DB_DATABASE=vin-data
 SERVER_PORT=3001
 
 JWT_SECRET=VERY_ULTRA_SECRET
-JWT_EXPIRES_IN=9000000
+JWT_EXPIRES_IN=90d
+
+IMAGE_API=b644e927319fb7cb2e036dcf0f9e17bc
